syntax = "proto3";
package user_package;


service User {
  rpc Register(RegisterRequest) returns(RegisterResponse) {};
  rpc ActivateUser(Token) returns(UserRes) {};
  rpc Login(LoginRequest) returns(LoginResponse) {};
  rpc GetUser(GetUserRequest) returns(GetUserResponse) {};
}

message GetUserRequest{
  string id = 1;
}

message GetUserResponse{
  string id = 1;
  string avatar = 3;
  string name = 2;
  string role = 4;
  string is_verified = 5;
}

message UserRes{
  int32 status = 1;
  string msg = 2;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string avatar = 4;
  string role = 5;
}

message RegisterResponse {
  string msg = 1;
  int32 status = 2;
  Token data = 3;

}
message Token {
  string token = 1;
  string activationCode = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}


